DotNet/Manifold/ManifoldNative.cs


// Manifold Mesh Extraction
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int manifold_meshgl_num_prop(ManifoldMeshGL *m);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int manifold_meshgl_num_vert(ManifoldMeshGL *m);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int manifold_meshgl_num_tri(ManifoldMeshGL *m);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int   manifold_meshgl_vert_properties_length(ManifoldMeshGL *m);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int   manifold_meshgl_tri_length(ManifoldMeshGL *m);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int   manifold_meshgl_merge_length(ManifoldMeshGL *m);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int   manifold_meshgl_run_index_length(ManifoldMeshGL *m);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int   manifold_meshgl_run_original_id_length(ManifoldMeshGL *m);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int   manifold_meshgl_run_transform_length(ManifoldMeshGL *m);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int   manifold_meshgl_face_id_length(ManifoldMeshGL *m);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int   manifold_meshgl_tangent_length(ManifoldMeshGL *m);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern float *manifold_meshgl_vert_properties(IntPtr  mem, ManifoldMeshGL *m);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint  *manifold_meshgl_tri_verts(IntPtr  mem, ManifoldMeshGL *m);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint  *manifold_meshgl_merge_from_vert(IntPtr  mem, ManifoldMeshGL *m);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint  *manifold_meshgl_merge_to_vert(IntPtr  mem, ManifoldMeshGL *m);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint  *manifold_meshgl_run_index(IntPtr  mem, ManifoldMeshGL *m);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint  *manifold_meshgl_run_original_id(IntPtr  mem, ManifoldMeshGL *m);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern float *manifold_meshgl_run_transform(IntPtr  mem, ManifoldMeshGL *m);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint  *manifold_meshgl_face_id(IntPtr  mem, ManifoldMeshGL *m);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern float *manifold_meshgl_halfedge_tangent(IntPtr  mem, ManifoldMeshGL *m);
        
        
        // memory size
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int  manifold_manifold_size();
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int  manifold_manifold_vec_size();
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int  manifold_cross_section_size();
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int  manifold_cross_section_vec_size();
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int  manifold_simple_polygon_size();
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int  manifold_polygons_size();
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int  manifold_manifold_pair_size();
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int  manifold_meshgl_size();
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int  manifold_box_size();
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern int  manifold_rect_size();

// destruction
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_destruct_manifold(ManifoldManifold *m);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_destruct_manifold_vec(ManifoldManifoldVec *ms);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_destruct_cross_section(ManifoldCrossSection *m);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_destruct_cross_section_vec(ManifoldCrossSectionVec *csv);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_destruct_simple_polygon(ManifoldSimplePolygon *p);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_destruct_polygons(ManifoldPolygons *p);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_destruct_meshgl(ManifoldMeshGL *m);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_destruct_box(ManifoldBox *b);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_destruct_rect(ManifoldRect *b);

// pointer free + destruction
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_delete_manifold(ManifoldManifold *m);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_delete_manifold_vec(ManifoldManifoldVec *ms);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_delete_cross_section(ManifoldCrossSection *cs);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_delete_cross_section_vec(ManifoldCrossSectionVec *csv);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_delete_simple_polygon(ManifoldSimplePolygon *p);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_delete_polygons(ManifoldPolygons *p);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_delete_meshgl(ManifoldMeshGL *m);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_delete_box(ManifoldBox *b);
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_delete_rect(ManifoldRect *b);

        
        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr manifold_malloc(int size);


        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_get_mesh_data_allocated(
            ManifoldManifold* m, // ManifoldManifold*
            ref double precision, // double*
            out IntPtr vertPos, // ManifoldVec3**
            out int vertPosCount, // int*
            out IntPtr triVerts, // ManifoldIVec3**
            out int triVertsCount, // int*
            out IntPtr vertNormal, // ManifoldVec3**
            out int vertNormaCount, // int*
            out IntPtr halfedgeTangent, // ManifoldVec4**
            out int halfedgeTangentCount // int*
        );

        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_get_mesh_data(
            ManifoldManifold* m, // ManifoldManifold*
            ref double precision, // double*
            ManifoldVec3* vertPos, // ManifoldVec3**
            out int vertPosCount, // int*
            ManifoldIVec3* triVerts, // ManifoldIVec3**
            out int triVertsCount, // int*
            ManifoldVec3* vertNormal, // ManifoldVec3**
            out int vertNormaCount, // int*
            ManifoldVec4* halfedgeTangent, // ManifoldVec4**
            out int halfedgeTangentCount // int*
        );


        [DllImport(NativeImport, CallingConvention = CallingConvention.Cdecl)]
        public static extern void manifold_free_mesh_data(IntPtr vertPos, IntPtr triVerts, IntPtr vertNormal,
            IntPtr halfedgeTangent);


        public unsafe static bool manifoldGetMeshData(ManifoldManifold* manifold,
            out double precision,
            out ManifoldVec3[] outVertPos,
            out int outVertPosCount,
            out ManifoldIVec3[] outTriVerts,
            out int outTriVertsCount,
            out ManifoldVec3[] outVertNormal,
            out int outVertNormaCount)
        {

            bool result = false;
            precision = 0;
            outVertPosCount = 0;
            outTriVertsCount = 0;
            outVertNormaCount = 0;
            outVertPos = null;
            outTriVerts = null;
            outVertNormal = null;
            int halfedgeTangentCount = 0;
            
            int num_vert = manifold_num_vert(manifold);
            int num_tri = manifold_num_tri(manifold);

            if (num_vert > 0 && num_tri > 0)
            {
                outVertPos = new ManifoldVec3[num_vert];
                outVertNormal = new ManifoldVec3[num_vert];
                outTriVerts = new ManifoldIVec3[num_tri];

                fixed (ManifoldVec3* vertPosPtr = &outVertPos[0])
                fixed (ManifoldVec3* outVertNormalPtr = &outVertNormal[0])
                fixed (ManifoldIVec3* outoutTriVertsPtr = &outTriVerts[0])
                {
                    manifold_get_mesh_data(
                        manifold,
                        ref precision,
                        vertPosPtr,
                        out outVertPosCount,
                        outoutTriVertsPtr,
                        out outTriVertsCount,
                        outVertNormalPtr,
                        out outVertNormaCount,
                        null,
                        out halfedgeTangentCount
                    );
                    
                    result = true;
                }
            }

            return result;
        }
    }
}